--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -20,5 +20,5 @@ jobs:
         run: |
           git remote add upstream https://github.com/SEG4910-Capstone/website.git
           git fetch upstream
-          git merge upstream/main --no-edit
+          git merge upstream/main --allow-unrelated-histories --no-edit
           git push origin main
