--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -13,12 +13,19 @@ jobs:
       - name: Checkout Fork
         uses: actions/checkout@v3
         with:
-          repository: Ife-deb/uOAV_website
+          repository: Ife-deb/uOAV_website  
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Add Upstream
         run: |
           git remote add upstream https://github.com/SEG4910-Capstone/website.git
           git fetch upstream
-          git merge upstream/main --allow-unrelated-histories --no-edit
-          git push origin main
+
+      - name: Merge Upstream Changes
+        run: |
+          git merge upstream/main --allow-unrelated-histories --no-edit  # Merge the upstream repository's main branch
+     
+      - name: Push Changes to Fork
+        run: |
+          git push origin main  # Push merged changes to your forked repository
+
